--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
 
 
 
-
+<!-- 
     
 
     <section id="featured">
@@ -358,6 +358,6 @@
                     </div>
                 </section>
  
-    </section>
+    </section> -->
 </body>
 </html>
